<resources>
    <string name="app_name">TKL Pvt. Ltd.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="job_listing">Job listing</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_slideshow">Subscription</string>
    <string name="job_applied">Applied Job"</string>
    <string name="remarks">Remarks"</string>

    <string name="tagline">TKL Pvt. Ltd.\nGet Best Jobs &amp; Tuitions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>