<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="Home" />
        <item
            android:id="@+id/login"
            android:icon="@drawable/outline_person_24"
            android:title="Login/Signup?" />

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/outline_person_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_file_open_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/appliedJobFragment"
            android:icon="@drawable/ic_baseline_touch_app_24"
            android:title="@string/job_applied" />
        <item
            android:id="@+id/nav_remark"
            android:icon="@drawable/ic_baseline_workspace_premium_24"
            android:title="@string/remarks" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_settings_power_black_36dp"
            android:title="Logout" />


    </group>
</menu>